Try commenting things out.

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
       src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
